# samping

./: .gitignore  README.md  pyproject.toml
docs/: protocol.md
example/: app.py  producer.py  worker.py
src/samping/: __init__.py  app.py  backoff.py  channel.py  exceptions.py  messages.py  routes.py  serialization.py  tasks.py  types.py  utils.py  worker.py
src/samping/adapters/: aws_lambda.py
src/samping/app/: app.py  conf.py  tracer.py
src/samping/driver/: __init__.py  sqs.py
src/samping/protocol/: __init__.py  lifespan.py  queue.py
src/samping/tasks/: __init__.py  request.py  tasks.py
src/samping/utils/: btree.py  compat.py  encoding.py  format.py  iterators.py  json.py  text.py  time.py  timer.py
tests/: example_app.py  test_app.py  test_btree.py  test_lambda_adapter.py  test_messages.py  test_rules.py  test_sqs_driver.py  test_task.py
